@@ -1,3 +1,12 @@
+2004-12-08 19:52 Gregory John Casamento <greg_casamento@yahoo.com>
+
+	* GormClassEditor.m: Use new ivar to store selected class.
+	* GormClassManager.m: Reimplement addAction:toClassNamed: and
+	addOutlet:forClassNamed:.
+	* GormImageEditor.m: Release the objects in dealloc.
+	* GormPrivate.h: Added new ivar for GormClassEditor to store
+	selected class in.
+	
 2004-12-05 18:21 Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* GormClassEditor.m: Added new methods moved from GormDocument.
